--- a/EbayProject/test-output/emailable-report.html
+++ b/EbayProject/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">45,280</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">54,419</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.ebay.qa.testCases.LoginPageTest</td><td><a href="#m0">loginEbayTest</a></td><td rowspan="1">1566409694820</td><td rowspan="1">9406</td></tr><tr class="passedeven"><td><a href="#m1">loginPageTitleTest</a></td><td rowspan="1">1566409712523</td><td rowspan="1">53</td></tr><tr class="passedeven"><td><a href="#m2">logoImageTest</a></td><td rowspan="1">1566409676736</td><td rowspan="1">120</td></tr><tr class="passedeven"><td><a href="#m3">test</a></td><td rowspan="1">1566409684917</td><td rowspan="1">1725</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.ebay.qa.testCases.GiftCardsPageTest</td><td><a href="#m0">clickOnCouponsLinkTextTest</a></td><td rowspan="1">1566523869956</td><td rowspan="1">2332</td></tr><tr class="passedeven"><td><a href="#m1">giftCardsPageTitleTest</a></td><td rowspan="1">1566523897468</td><td rowspan="1">20</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.ebay.qa.testCases.LoginPageTest#loginEbayTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.ebay.qa.testCases.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.ebay.qa.testCases.LoginPageTest#logoImageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.ebay.qa.testCases.LoginPageTest#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.ebay.qa.testCases.GiftCardsPageTest#clickOnCouponsLinkTextTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.ebay.qa.testCases.GiftCardsPageTest#giftCardsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
