--- a/EbayProject/test-output/index.html
+++ b/EbayProject/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-869007662\testng-customsuite.xml</span>
+                    <span>C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-1668333353\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.LoginPageTest" hash-for-method="loginEbayTest">loginEbayTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.GiftCardsPageTest" hash-for-method="clickOnCouponsLinkTextTest">clickOnCouponsLinkTextTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.LoginPageTest" hash-for-method="loginPageTitleTest">loginPageTitleTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.LoginPageTest" hash-for-method="logoImageTest">logoImageTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.LoginPageTest" hash-for-method="test">test</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.GiftCardsPageTest" hash-for-method="giftCardsPageTitleTest">giftCardsPageTitleTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,35 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.ebay.qa.testCases.LoginPageTest</span>
+              <span class="class-name">com.ebay.qa.testCases.GiftCardsPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginEbayTest">
-                  </a> <!-- loginEbayTest -->
-                  <span class="method-name">loginEbayTest</span>
+                  <a name="clickOnCouponsLinkTextTest">
+                  </a> <!-- clickOnCouponsLinkTextTest -->
+                  <span class="method-name">clickOnCouponsLinkTextTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginPageTitleTest">
-                  </a> <!-- loginPageTitleTest -->
-                  <span class="method-name">loginPageTitleTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="logoImageTest">
-                  </a> <!-- logoImageTest -->
-                  <span class="method-name">logoImageTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test">
-                  </a> <!-- test -->
-                  <span class="method-name">test</span>
+                  <a name="giftCardsPageTitleTest">
+                  </a> <!-- giftCardsPageTitleTest -->
+                  <span class="method-name">giftCardsPageTitleTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-869007662\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-1668333353\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.ebay.qa.testCases.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.ebay.qa.testCases.GiftCardsPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginEbayTest')
-data.setCell(0, 2, 'com.ebay.qa.testCases.LoginPageTest')
-data.setCell(0, 3, 9406);
+data.setCell(0, 1, 'clickOnCouponsLinkTextTest')
+data.setCell(0, 2, 'com.ebay.qa.testCases.GiftCardsPageTest')
+data.setCell(0, 3, 2332);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test')
-data.setCell(1, 2, 'com.ebay.qa.testCases.LoginPageTest')
-data.setCell(1, 3, 1725);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'logoImageTest')
-data.setCell(2, 2, 'com.ebay.qa.testCases.LoginPageTest')
-data.setCell(2, 3, 120);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginPageTitleTest')
-data.setCell(3, 2, 'com.ebay.qa.testCases.LoginPageTest')
-data.setCell(3, 3, 53);
+data.setCell(1, 1, 'giftCardsPageTitleTest')
+data.setCell(1, 2, 'com.ebay.qa.testCases.GiftCardsPageTest')
+data.setCell(1, 3, 20);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,54 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.ebay.qa.testCases.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.ebay.qa.testCases.GiftCardsPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">logoImageTest</span>
-                <span class="method-start">8656 ms</span>
+                <span class="method-name">clickOnCouponsLinkTextTest</span>
+                <span class="method-start">26047 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8779 ms</span>
+                <span class="method-start">28383 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">9516 ms</span>
+                <span class="method-start">29247 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">test</span>
-                <span class="method-start">16837 ms</span>
+                <span class="method-name">giftCardsPageTitleTest</span>
+                <span class="method-start">53559 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18563 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">19308 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginEbayTest</span>
-                <span class="method-start">26740 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">36147 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">36950 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginPageTitleTest</span>
-                <span class="method-start">44443 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">44497 ms</span>
+                <span class="method-start">53583 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
