--- a/EbayProject/test-output/old/Default suite/methods.html
+++ b/EbayProject/test-output/old/Default suite/methods.html
@@ -1,28 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:47:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:47:56</td>   <td>8656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.logoImageTest()[pri:1, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">logoImageTest</td> 
-  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:47:56</td>   <td>8779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:47:57</td>   <td>9516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:04</td>   <td>16837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.test()[pri:2, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">test</td> 
-  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:06</td>   <td>18564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:07</td>   <td>19309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:14</td>   <td>26740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginEbayTest()[pri:3, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">loginEbayTest</td> 
-  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:24</td>   <td>36147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:25</td>   <td>36951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:32</td>   <td>44443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:4, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">loginPageTitleTest</td> 
-  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/21 11:48:32</td>   <td>44497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 19:30:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GiftCardsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:09</td>   <td>26047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiftCardsPageTest.clickOnCouponsLinkTextTest()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">clickOnCouponsLinkTextTest</td> 
+  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:12</td>   <td>28383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GiftCardsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:13</td>   <td>29247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GiftCardsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:37</td>   <td>53559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiftCardsPageTest.giftCardsPageTitleTest()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">giftCardsPageTitleTest</td> 
+  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:37</td>   <td>53583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GiftCardsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
 </table>
