--- a/EbayProject/test-output/index.html
+++ b/EbayProject/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-580834197\testng-customsuite.xml</span>
+                    <span>C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse--2037297527\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.DailyDealsPageTest" hash-for-method="clickOnFeaturedLinkTest">clickOnFeaturedLinkTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.HelpContactsPageTest" hash-for-method="searchHelpTest">searchHelpTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.DailyDealsPageTest" hash-for-method="clickOnTechPageLinkTest">clickOnTechPageLinkTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.DailyDealsPageTest" hash-for-method="dailyDealsPageTitleTest">dailyDealsPageTitleTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.DailyDealsPageTest" hash-for-method="varifyOtherDealsPresentTest">varifyOtherDealsPresentTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ebay.qa.testCases.HelpContactsPageTest" hash-for-method="verifyHelpLabelTest">verifyHelpLabelTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,35 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.ebay.qa.testCases.DailyDealsPageTest</span>
+              <span class="class-name">com.ebay.qa.testCases.HelpContactsPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickOnFeaturedLinkTest">
-                  </a> <!-- clickOnFeaturedLinkTest -->
-                  <span class="method-name">clickOnFeaturedLinkTest</span>
+                  <a name="searchHelpTest">
+                  </a> <!-- searchHelpTest -->
+                  <span class="method-name">searchHelpTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="clickOnTechPageLinkTest">
-                  </a> <!-- clickOnTechPageLinkTest -->
-                  <span class="method-name">clickOnTechPageLinkTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="dailyDealsPageTitleTest">
-                  </a> <!-- dailyDealsPageTitleTest -->
-                  <span class="method-name">dailyDealsPageTitleTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="varifyOtherDealsPresentTest">
-                  </a> <!-- varifyOtherDealsPresentTest -->
-                  <span class="method-name">varifyOtherDealsPresentTest</span>
+                  <a name="verifyHelpLabelTest">
+                  </a> <!-- verifyHelpLabelTest -->
+                  <span class="method-name">verifyHelpLabelTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-580834197\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse--2037297527\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.ebay.qa.testCases.DailyDealsPageTest&quot;/&gt;
+      &lt;class name=&quot;com.ebay.qa.testCases.HelpContactsPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickOnFeaturedLinkTest')
-data.setCell(0, 2, 'com.ebay.qa.testCases.DailyDealsPageTest')
-data.setCell(0, 3, 1661);
+data.setCell(0, 1, 'searchHelpTest')
+data.setCell(0, 2, 'com.ebay.qa.testCases.HelpContactsPageTest')
+data.setCell(0, 3, 157);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'clickOnTechPageLinkTest')
-data.setCell(1, 2, 'com.ebay.qa.testCases.DailyDealsPageTest')
-data.setCell(1, 3, 1571);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'varifyOtherDealsPresentTest')
-data.setCell(2, 2, 'com.ebay.qa.testCases.DailyDealsPageTest')
-data.setCell(2, 3, 69);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'dailyDealsPageTitleTest')
-data.setCell(3, 2, 'com.ebay.qa.testCases.DailyDealsPageTest')
-data.setCell(3, 3, 13);
+data.setCell(1, 1, 'verifyHelpLabelTest')
+data.setCell(1, 2, 'com.ebay.qa.testCases.HelpContactsPageTest')
+data.setCell(1, 3, 45);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 202 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,54 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.ebay.qa.testCases.DailyDealsPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.ebay.qa.testCases.HelpContactsPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clickOnFeaturedLinkTest</span>
-                <span class="method-start">31901 ms</span>
+                <span class="method-name">searchHelpTest</span>
+                <span class="method-start">21064 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">33565 ms</span>
+                <span class="method-start">21224 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">34362 ms</span>
+                <span class="method-start">21225 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clickOnTechPageLinkTest</span>
-                <span class="method-start">50875 ms</span>
+                <span class="method-name">verifyHelpLabelTest</span>
+                <span class="method-start">42465 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">52447 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">53510 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">dailyDealsPageTitleTest</span>
-                <span class="method-start">77533 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">77548 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">78298 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">varifyOtherDealsPresentTest</span>
-                <span class="method-start">98640 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">98711 ms</span>
+                <span class="method-start">42513 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
