--- a/EbayProject/test-output/old/Default suite/classes.html
+++ b/EbayProject/test-output/old/Default suite/classes.html
@@ -4,26 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ebay.qa.testCases.DailyDealsPageTest</td>
+<td>com.ebay.qa.testCases.HelpContactsPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickOnFeaturedLinkTest</td>
+<td>verifyHelpLabelTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickOnTechPageLinkTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>dailyDealsPageTitleTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>varifyOtherDealsPresentTest</td>
+<td>searchHelpTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
