--- a/EbayProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/EbayProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.clickOnFeaturedLinkTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">clickOnFeaturedLinkTest</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpContactsPageTest.searchHelpTest()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">searchHelpTest</td> 
   <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:50</td>   <td>18974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.clickOnTechPageLinkTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">clickOnTechPageLinkTest</td> 
-  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:17</td>   <td>45632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.dailyDealsPageTitleTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">dailyDealsPageTitleTest</td> 
-  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:20:59</td>   <td>-31900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:06</td>   <td>-21064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HelpContactsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:33</td>   <td>2462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:27</td>   <td>161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HelpContactsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:53</td>   <td>21610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:27</td>   <td>160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HelpContactsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:17</td>   <td>46398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:49</td>   <td>21449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HelpContactsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:33</td>   <td>1664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:51</td>   <td>20546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:17</td>   <td>45647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:38</td>   <td>66810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:38</td>   <td>66739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.varifyOtherDealsPresentTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">varifyOtherDealsPresentTest</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:48</td>   <td>21401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpContactsPageTest.verifyHelpLabelTest()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">verifyHelpLabelTest</td> 
   <td>main@717386707</td>   <td></td> </tr>
 </table>
