--- a/EbayProject/test-output/old/Default suite/methods.html
+++ b/EbayProject/test-output/old/Default suite/methods.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HelpContactsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:27</td>   <td>21064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpContactsPageTest.searchHelpTest()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">searchHelpTest</td> 
-  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:27</td>   <td>21224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HelpContactsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:27</td>   <td>21225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HelpContactsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:48</td>   <td>42465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpContactsPageTest.verifyHelpLabelTest()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">verifyHelpLabelTest</td> 
-  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/23 00:08:49</td>   <td>42513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HelpContactsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.HelpContactsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:52:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:10</td>   <td>10212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.logoImageTest()[pri:1, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">logoImageTest</td> 
+  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:10</td>   <td>10440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:11</td>   <td>11228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:20</td>   <td>20476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.test()[pri:2, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">test</td> 
+  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:25</td>   <td>25541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:26</td>   <td>26802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:35</td>   <td>35308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginEbayTest()[pri:3, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">loginEbayTest</td> 
+  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:42</td>   <td>42910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:43</td>   <td>43975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:52</td>   <td>52529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:4, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">loginPageTitleTest</td> 
+  <td>main@1843368112</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>19/08/25 00:53:52</td>   <td>52566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.LoginPageTest@4cf777e8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1843368112</td>   <td></td> </tr>
 </table>
